--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /.aws-sam/
 /venv/
+/.idea/aws.xml
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/svitlo_lambda.iml
+/.idea/vcs.xml
